--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -24,18 +24,18 @@
   <!-- HEADER START -->
   <header class="nav-bar">
     <nav class="container">
-      <ul>
-        <h1 class="nav-item"><a class="link-primany" href="#"><b class="nav-logo">SHOP.CO</b></a></h1>
+      <h1><a class="link-primany" href="#"><b class="nav-logo">SHOP.CO</b></a></h1>
+      <ul class="nav">
         <li class="nav-item">
-          <a class="link-primany nav-item-link" href="/">Shop</a>
+          <a class="link-primany nav-link" href="/">Shop</a>
           <select class="drop-list" name="test" id="1">
-            <option value="q"></option>
-            <option value="s"></option>
+            <option value="q">Casual</option>
+            <option value="s">Gym</option>
           </select>
         </li>
-        <li class="nav-item"><a class="link-primany nav-item-link" href="#">On Sale</a></li>
-        <li class="nav-item"><a class="link-primany nav-item-link" href="/">New Arrivals</a></li>
-        <li class="nav-item"><a class="link-primany nav-item-link" href="/">Brand</a></li>
+        <li class="nav-item"><a class="link-primany nav-link" href="#">On Sale</a></li>
+        <li class="nav-item"><a class="link-primany nav-link" href="/">New Arrivals</a></li>
+        <li class="nav-item"><a class="link-primany nav-link" href="/">Brand</a></li>
         <li class="nav-item">
           <form>
             <input class="nav-search" type="text" name="search" placeholder="Search for products...">
@@ -61,16 +61,16 @@
       </button>
       <div class="tbl">
         <ul>
-          <li class="tbl-th"><b>200+</b></th>
-          <li class="tbl-td">International Brands</td>
+          <li class="tbl-th"><b>200+</b></li>
+          <li class="tbl-td">International Brands  <img class="line-primary" src="./assets/images/line.png" alt="line"></li>
         </ul>
         <ul>
-          <li class="tbl-th"><b>2,000+</b></th>
-          <li class="tbl-td">High-Quality Products</td>
+          <li class="tbl-th"><b>2,000+</b></li>
+          <li class="tbl-td">High-Quality Products <img class="line-primary" src="./assets/images/line.png" alt="line"></li>
         </ul>
         <ul>
-          <li class="tbl-th"><b>30,000+</b></th>
-          <li class="tbl-td">Happy Customers</td>
+          <li class="tbl-th"><b>30,000+</b></li>
+          <li class="tbl-td">Happy Customers</li>
         </ul>
       </div>
       <img src="./assets/images/star.svg" class="icon-left" alt="star">
@@ -367,7 +367,7 @@
             <p class="footer-desc list-item">Help</p>
           </li>
           <li class="item-primary">
-            <a class="nav-item-link" href="/">Customer Support</p></a>
+            <a class="nav-item-link" href="/"><p>Customer Support</p></a>
           </li>
           <li class="item-primary">
             <a class="nav-item-link" href="/">
