--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -317,7 +317,7 @@
       </legend>
       <div class="footer-contact">
         <input class="contact-email" type="text" name="email" placeholder="Enter your email adress">
-        <input class="contact-desc" type="text" name="desc" placeholder="Subscribe to Newsletter">
+        <button class="btn-contact">Subscribe to Newsletter</button>
       </div>
       <div class="container footer-th">
         <ul>
