--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -316,7 +316,7 @@
         <h2 class="title fiveth-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
       </legend>
       <div class="footer-contact">
-        <input class="contact-email" type="text" name="email" placeholder="Enter your email adress">
+        <input class="contact-email" type="text" name="email" placeholder="Enter your email address">
         <button class="btn-contact">Subscribe to Newsletter</button>
       </div>
       <div class="container footer-th">
