--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -215,7 +215,7 @@
             <img src="./assets/images/star-full.svg" alt="star-full">
             <img src="./assets/images/star-full.svg" alt="star-full">
             <img src="./assets/images/star-full.svg" alt="star-full">
-            <p class="evaluate-num">5/<span class="product-span">5</span></p>
+            <p class="evaluate-num">5/<span class="span-num">5</span></p>
           </div>
           <div class="product-desc">
             <p class="price">&#36;80</p>
