--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -62,11 +62,13 @@
       <div class="tbl">
         <ul>
           <li class="tbl-th"><b>200+</b></li>
-          <li class="tbl-td">International Brands  <img class="line-primary" src="./assets/images/line.png" alt="line"></li>
+          <li class="tbl-td">International Brands <img class="line-primary" src="./assets/images/line.png" alt="line">
+          </li>
         </ul>
         <ul>
           <li class="tbl-th"><b>2,000+</b></li>
-          <li class="tbl-td">High-Quality Products <img class="line-primary" src="./assets/images/line.png" alt="line"></li>
+          <li class="tbl-td">High-Quality Products <img class="line-primary" src="./assets/images/line.png" alt="line">
+          </li>
         </ul>
         <ul>
           <li class="tbl-th"><b>30,000+</b></li>
@@ -161,11 +163,9 @@
           </div>
         </li>
       </ul>
-      <!-- <a class="link-primany" href="#"> -->
       <button class="btn btn-secondary">
         View All
       </button>
-      <!-- </a>  -->
     </div>
   </section>
   <!-- ARRIVAL SECTION END -->
@@ -237,11 +237,9 @@
           </div>
         </li>
       </ul>
-      <!-- <a class="link-primany" href="/"> -->
       <button class="btn btn-secondary">
         View All
       </button>
-      <!-- </a> -->
     </div>
   </section>
   <!-- TOP SELLING SECTION END -->
@@ -367,7 +365,9 @@
             <p class="footer-desc list-item">Help</p>
           </li>
           <li class="item-primary">
-            <a class="nav-item-link" href="/"><p>Customer Support</p></a>
+            <a class="nav-item-link" href="/">
+              <p>Customer Support</p>
+            </a>
           </li>
           <li class="item-primary">
             <a class="nav-item-link" href="/">
