--- a/example/index.html
+++ b/example/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Introducing CSS</title>
+  <link href="style.css" type="text/css" rel="stylesheet" />
 </head>
+
 <body>
-    <P>page to example branch feature/example form develop</P>
+  <h1>this is title</h1>
+  <p>this is example</p>
+  <!-- font face  -->
+  <p class="text">this is integrad CF</p>
+  <!-- font weight  -->
+  <p class="text-bold text">this is text bold and font-family is integrand CF</p>
+  <!-- font style-oblique  -->
+  <p class="text-style ">this is font style oblique</p>
+  <!-- font style-italic  -->
+  <p class="text-style-italic ">this is font style italic</p>
+  <!-- text-decoration -->
+  <p class="decoration-underline">this is text decoration underline</p>
+  <p class="decoration-overline">this is text decoration overline</p>
+  <!-- alignment-left -->
+  <p class="alignment-left">this is text alignment right</p>
+  <!-- alignment-center -->
+  <p class="alignment-center">this is text alignment center</p>
+  <!-- alignment-justify -->
+  <p class="alignment-justify">this is text alignment justify his is text alignment justifhis is text alignment
+    justifhis is text alignment justifhis is text alignment justifhis is text alignment justif</p>
 </body>
+
 </html>
