add comment for example html

--- a/example/list.html
+++ b/example/list.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- order list -->
-    <p>this is order list </p>
-    <ol>
-        <li>home</li>
-        <li>product</li>
-        <li>contact</li>
-    </ol>
-    <p>this is unorder list </p>
-    <ul>
-        <li>home</li>
-        <li>product</li>
-        <li>contact</li>
-    </ul>
 
-    <!-- definition list -->
-    <p>definition list</p>
-    <dl>
-        <dt>123</dt>
-        <dd>vietnam</dd>
-        <dt>456</dt>
-        <dd>such as shredded daikon radish or 
-            ginger root, wasab</dd>
-        <dt>789</dt>
-        <dd> technique by which the scales are removed 
-            from the ski</dd>
-    </dl>
-    <p>nested list </p>
-    <ul>
-        <li>home</li>
-        <li>contact
-            <ul>
-                <li>1</li>
-                <li>5</li>
-                <li>8</li>
-            </ul>
-        </li>
-        <li>search</li>
-    </ul>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+  <!-- order list -->
+  <p>this is order list </p>
+  <ol>
+    <li>home</li>
+    <li>product</li>
+    <li>contact</li>
+  </ol>
+  <!-- unoder list  -->
+  <p>this is unorder list </p>
+  <ul>
+    <li>home</li>
+    <li>product</li>
+    <li>contact</li>
+  </ul>
+
+  <!-- definition list -->
+  <p>definition list</p>
+  <dl>
+    <dt>123</dt>
+    <dd>vietnam</dd>
+    <dt>456</dt>
+    <dd>such as shredded daikon radish or
+      ginger root, wasab</dd>
+    <dt>789</dt>
+    <dd> technique by which the scales are removed
+      from the ski</dd>
+  </dl>
+  <!-- nested list  -->
+  <p>nested list </p>
+  <ul>
+    <li>home</li>
+    <li>contact
+      <ul>
+        <li>1</li>
+        <li>5</li>
+        <li>8</li>
+      </ul>
+    </li>
+    <li>search</li>
+  </ul>
 </body>
+
 </html>
