--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -90,7 +90,7 @@
   <!-- BRAND SECTION END -->
 
   <!-- ARRIVAL SECTION START -->
-  <div class="container">
+  <div class="container"> <!-- Container start -->
     <section class="arrival-section">
       <h2 class="title secondary-title">NEW ARRIVALS</h2>
       <div class="product">
@@ -233,233 +233,137 @@
       <button class="btn btn-secondary">
         View All
       </button>
-
     </section>
     <!-- TOP SELLING SECTION END -->
 
     <!-- BROWES SECTION START -->
     <section class="browse-section">
       <h2 class="title third-title">BROWSE BY DRESS STYLE</h2>
-        <div class="product">
-          <div class="product-item">
-              thanh
-          </div>
-          <div class="product-item">
-            thanh123
+      <div class="browse-item">
+        <div>
+          <img src="./assets/images/casual.png" alt="">
+          <!-- <p>Causal</p> -->
         </div>
-          <!-- <img class="browes-img" src="./assets/images/casual.png" alt="casual"> -->
-          <!-- <p class="desc top-left">Casual</p> -->
-
-
-          <!-- <img class="browes-img" src="./assets/images/formal.png" alt="formal"> -->
-          <!-- <p class="desc top-right">Formal</p> -->
+        <div>
+          <img src="./assets/images/formal.png" alt="">
+          <!-- <p>Fomal</p> -->
         </div>
-
-          <!-- <img class="browes-img" src="./assets/images/party.png" alt="party"> -->
-          <!-- <p class="desc bot-left">Party</p> -->
-
-          <!--  <img class="browes-img" src="./assets/images/gym.png" alt="gym"> -->
-          <!-- <p class="desc bot-right">Gym</p> -->
-
+      </div>
     </section>
     <!-- BROWES SECTION END -->
 
     <!-- OUR HAPPY CUSTOMER START -->
-    <article class="customer">
-      <div class="container">
+    <section>
+      <div class="customer">
         <h2 class="title fourth-title">OUR HAPPY CUSTOMERS</h2>
-        <a href="/"><img class="next-btn" src="./assets/images/prev-icon.svg" alt="next-icon"></a>
-        <a href="/"><img class="prev-btn  " src="./assets/images/next-icon.svg" alt="prev-icon"></a>
-        <ul class="customer-list">
-          <li class="customer-item">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <p class="customer-desc">Sarah M.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
-                alt="blue-check-mark"><span class="customer-comments">
-                "I'm blown away by the quality and style of the clothes I received from Shop.co. From casual wear to
-                elegant dresses, every piece I've bought has exceeded my expectations.”</span></p>
-          </li>
-          <li class="customer-item">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <p class="customer-desc">Alex K.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
-                alt="blue-check-mark"><span class="customer-comments">"Finding clothes that align with my personal style
-                used to be a challenge until I
-                discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes
-                and occasions.”</span></p>
-          </li>
-          <li class="customer-item">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <img src="./assets/images/star-full.svg" alt="star-full">
-            <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
-                alt="blue-check-mark"><span class="customer-comments">
-                "As someone who's always on the lookout for unique fashion pieces, I'm thrilled to have stumbled upon
-                Shop.co. The selection of clothes is not only diverse but also on-point with the latest trends.”
-              </span></p>
-          </li>
-        </ul>
+        <div>
+          <a href="/"><img class="prev-btn  " src="./assets/images/next-icon.svg" alt="prev-icon"></a>
+          <a href="/"><img class="next-btn" src="./assets/images/prev-icon.svg" alt="next-icon"></a>
+        </div>
       </div>
-    </article>
-  </div>
+      <div class="customer-list">
+        <div class="customer-item">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <p class="customer-desc">Sarah M.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
+              alt="blue-check-mark"></p>
+          <p class="customer-comments">
+            "I'm blown away by the quality and style of the clothes I received from Shop.co. From casual wear to
+            elegant dresses, every piece I've bought has exceeded my expectations.”</p>
+        </div>
+        <div class="customer-item">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <p class="customer-desc">Alex K.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
+              alt="blue-check-mark"></p>
+          <p class="customer-comments">"Finding clothes that align with my personal style
+            used to be a challenge until I
+            discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes
+            and occasions.”</p>
+        </div>
+        <div class="customer-item">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <img src="./assets/images/star-full.svg" alt="star-full">
+          <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
+              alt="blue-check-mark"></p>
+          <p class="customer-comments">
+            "As someone who's always on the lookout for unique fashion pieces, I'm thrilled to have stumbled upon
+            Shop.co. The selection of clothes is not only diverse but also on-point with the latest trends.”
+          </p>
+        </div>
+      </div>
+    </section>
+  </div>  <!-- Container end -->
   <!-- OUR HAPPY CUSTOMER END -->
 
   <!-- FOOTER START -->
-  <!-- <footer>
+  <footer>
     <fieldset class="footer">
+
       <legend class="footer-legend">
         <h2 class="title fiveth-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
+        <div class="footer-contact">
+          <input class="contact-email" type="text" name="email" placeholder="Enter your email address">
+          <button class="btn-contact">Subscribe to Newsletter</button>
+        </div>
       </legend>
-      <div class="footer-contact">
-        <input class="contact-email" type="text" name="email" placeholder="Enter your email address">
-        <button class="btn-contact">Subscribe to Newsletter</button>
+      <div class="footer-nav">
+        <div class="footer-item">
+          <p class="footer-logo">shop.co</p>
+          <p class="footer-decs">We have clothes that suits your style and which you’re proud to wear. From women to
+            men.</p>
+          <img class="footer-icon" src="./assets/images/social.svg" alt="">
+        </div>
+        <div class="footer-item">
+          <p class="footer-nav-head">Company</p>
+          <p>About</p>
+          <p>Features</p>
+          <p>Works</p>
+          <p>Career</p>
+        </div>
+        <div class="footer-item">
+          <p class="footer-nav-head">Help</p>
+          <p>Customer Support</p>
+          <p> Delivery Details</p>
+          <p>Terms & Conditions</p>
+          <p> Privacy Policy</p>
+        </div>
+        <div class="footer-item">
+          <p class="footer-nav-head">FAQ</p>
+          <p>Account</p>
+          <p>Manage Deliveries</p>
+          <p>Orders</p>
+          <p>Payments</p>
+        </div>
+        <div class="footer-item">
+          <p class="footer-nav-head">Resources</p>
+          <p>Free eBooks</p>
+          <p>Development Tutoria</p>
+          <p>How to - Blog</p>
+          <p>Youtube Playlist</p>
+        </div>
       </div>
-      <div class="container footer-th">
-        <ul>
-          <li>
-            <p class="footer-logo">SHOP.CO</p>
-          </li>
-          <li>
-            <p class="item-secondary">We have clothes that suits your style and which you're proud to wear. From
-              women to men.</p>
-          </li>
-          <li>
-            <ul id="social">
-              <li class="social-item" id="twitter"><a class="social-link" href="/"></a></li>
-              <li class="social-item" id="fb"><a class="social-link" href="/"></a></li>
-              <li class="social-item" id="instagram"><a class="social-link" href="/"></a></li>
-              <li class="social-item" id="github"><a class="social-link" href="/"></a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <p class="footer-desc list-item">Company</p>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>About</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Features</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Works</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Career</p>
-            </a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <p class="footer-desc list-item">Help</p>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Customer Support</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Delivery Details</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Terms & Conditions</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Privacy Policy</p>
-            </a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <p class="footer-desc list-item">FAQ</p>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Account</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Delivery Details</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Orders</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Payments</p>
-            </a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <p class="footer-desc list-item ">Resources</p>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Free eBooks</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Development Tutorial</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>How to - Blog</p>
-            </a>
-          </li>
-          <li class="item-primary">
-            <a class="nav-item-link" href="/">
-              <p>Youtube Playlist</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <hr class="line">
-      <div class="footer-copyright">
-        <p class="item-primary copyright">Shop.co © 2000-2023, All Rights Reserved</p>
-        <ul>
-          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/g-pay.svg" alt="g-pay"></a>
-          </li>
-          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/ip-pay.svg" alt="ip"></a>
-          </li>
-          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/paypal.svg"
-                alt="paypal"></a></li>
-          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/badge.svg" alt="badge"></a>
-          </li>
-          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/visa.svg" alt="visa"></a>
-          </li>
-        </ul>
+      <div class="copyright">
+        <p>Shop.co © 2000-2023, All Rights Reserved</p>
+        <div>
+          <img class="icon-payment" src="./assets/images/visa.svg" alt="">
+          <img class="icon-payment" src="./assets/images/badge.svg" alt="">
+          <img class="icon-payment" src="./assets/images/paypal.svg" alt="">
+          <img class="icon-payment" src="./assets/images/ip-pay.svg" alt="">
+          <img class="icon-payment" src="./assets/images/g-pay.svg" alt="">
+        </div>
       </div>
     </fieldset>
-  </footer> -->
-  </div>
+  </footer>
   <!-- FOOTER END -->
 </body>
 
