--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -25,13 +25,7 @@
     <nav class="nav-bar">
       <h1 class="nav-logo"><a class="link-primany" href="#">SHOP.CO</a></h1>
       <ul class="nav">
-        <li class="nav-item">
-          shop
-          <select class="drop-list" name="test" id="1">
-            <option value="q">Casual</option>
-            <option value="s">Gym</option>
-          </select>
-        </li>
+        <li class="nav-item">Shop</li>
         <li class="nav-item">On Sale</li>
         <li class="nav-item">New Arrivals</li>
         <li class="nav-item">Brand</li>
@@ -239,15 +233,17 @@
     <!-- BROWES SECTION START -->
     <section class="browse-section">
       <h2 class="title third-title">BROWSE BY DRESS STYLE</h2>
-      <div class="browse-item">
-        <div>
-          <img src="./assets/images/casual.png" alt="">
-          <!-- <p>Causal</p> -->
-        </div>
-        <div>
-          <img src="./assets/images/formal.png" alt="">
-          <!-- <p>Fomal</p> -->
-        </div>
+      <div class="browes">
+        <p>Causal</p>
+        <img class="browse-img" src="./assets/images/casual.png" alt="">
+        <p>Formal</p>
+        <img class="browse-img" src="./assets/images/formal.png" alt="">
+      </div>
+      <div class="browes">
+        <p>Party</p>
+        <img class="browse-img" src="./assets/images/party.png" alt="">
+        <p>Gym</p>
+        <img class="browse-img" src="./assets/images/gym.png" alt="">
       </div>
     </section>
     <!-- BROWES SECTION END -->
@@ -257,7 +253,7 @@
       <div class="customer">
         <h2 class="title fourth-title">OUR HAPPY CUSTOMERS</h2>
         <div>
-          <a href="/"><img class="prev-btn  " src="./assets/images/next-icon.svg" alt="prev-icon"></a>
+          <a href="/"><img class="prev-btn" src="./assets/images/next-icon.svg" alt="prev-icon"></a>
           <a href="/"><img class="next-btn" src="./assets/images/prev-icon.svg" alt="next-icon"></a>
         </div>
       </div>
@@ -302,13 +298,12 @@
         </div>
       </div>
     </section>
-  </div>  <!-- Container end -->
+  </div> <!-- Container end -->
   <!-- OUR HAPPY CUSTOMER END -->
 
   <!-- FOOTER START -->
   <footer>
     <fieldset class="footer">
-
       <legend class="footer-legend">
         <h2 class="title fiveth-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
         <div class="footer-contact">
@@ -318,48 +313,48 @@
       </legend>
       <div class="footer-nav">
         <div class="footer-item">
-          <p class="footer-logo">shop.co</p>
+          <h3 class="footer-logo">shop.co</h3>
           <p class="footer-decs">We have clothes that suits your style and which you’re proud to wear. From women to
             men.</p>
           <img class="footer-icon" src="./assets/images/social.svg" alt="">
         </div>
         <div class="footer-item">
-          <p class="footer-nav-head">Company</p>
-          <p>About</p>
-          <p>Features</p>
-          <p>Works</p>
-          <p>Career</p>
+          <h3 class="footer-nav-head">Company</h3>
+          <a class="footer-link" href="">About</a>
+          <a class="footer-link" href="">Features</a>
+          <a class="footer-link" href="">Works</a>
+          <a class="footer-link" href="">Career</a>
         </div>
         <div class="footer-item">
-          <p class="footer-nav-head">Help</p>
-          <p>Customer Support</p>
-          <p> Delivery Details</p>
-          <p>Terms & Conditions</p>
-          <p> Privacy Policy</p>
+          <h3 class="footer-nav-head">Help</h3>
+          <a class="footer-link" href="">Customer Support</a>
+          <a class="footer-link" href="">Delivery Details</a>
+          <a class="footer-link" href="">Terms & Conditions</a>
+          <a class="footer-link" href="">Privacy Policy</a>
         </div>
         <div class="footer-item">
-          <p class="footer-nav-head">FAQ</p>
-          <p>Account</p>
-          <p>Manage Deliveries</p>
-          <p>Orders</p>
-          <p>Payments</p>
+          <h3 class="footer-nav-head">FAQ</h3>
+          <a class="footer-link" href="">Account</a>
+          <a class="footer-link" href="">Manage Deliveries</a>
+          <a class="footer-link" href="">Orders</a>
+          <a class="footer-link" href="">Payments</a>
         </div>
         <div class="footer-item">
-          <p class="footer-nav-head">Resources</p>
-          <p>Free eBooks</p>
-          <p>Development Tutoria</p>
-          <p>How to - Blog</p>
-          <p>Youtube Playlist</p>
+          <h3 class="footer-nav-head">Resources</h3>
+          <a class="footer-link" href="">Free eBooks</a>
+          <a class="footer-link" href="">Development Tutoria</a>
+          <a class="footer-link" href="">How to - Blog</a>
+          <a class="footer-link" href="">Youtube Playlist</a>
         </div>
       </div>
       <div class="copyright">
         <p>Shop.co © 2000-2023, All Rights Reserved</p>
         <div>
-          <img class="icon-payment" src="./assets/images/visa.svg" alt="">
-          <img class="icon-payment" src="./assets/images/badge.svg" alt="">
-          <img class="icon-payment" src="./assets/images/paypal.svg" alt="">
-          <img class="icon-payment" src="./assets/images/ip-pay.svg" alt="">
-          <img class="icon-payment" src="./assets/images/g-pay.svg" alt="">
+          <a href=""><img class="icon-payment" src="./assets/images/visa.svg" alt=""></a>
+          <a href=""> <img class="icon-payment" src="./assets/images/badge.svg" alt=""></a>
+          <a href=""><img class="icon-payment" src="./assets/images/paypal.svg" alt=""></a>
+          <a href=""><img class="icon-payment" src="./assets/images/ip-pay.svg" alt=""></a>
+          <a href=""><img class="icon-payment" src="./assets/images/g-pay.svg" alt=""></a>
         </div>
       </div>
     </fieldset>
