fix layout for browes

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -234,16 +234,24 @@
     <section class="browse-section">
       <h2 class="title third-title">BROWSE BY DRESS STYLE</h2>
       <div class="browes">
-        <p>Causal</p>
-        <img class="browse-img" src="./assets/images/casual.png" alt="">
-        <p>Formal</p>
-        <img class="browse-img" src="./assets/images/formal.png" alt="">
+        <div>
+          <p class="browes-desc">Causal</p>
+          <img class="browse-img" src="./assets/images/casual.png" alt="">
+        </div>
+        <div>
+          <p class="browes-desc">Formal</p>
+          <img class="browse-img" src="./assets/images/formal.png" alt="">
+        </div>
       </div>
       <div class="browes">
-        <p>Party</p>
-        <img class="browse-img" src="./assets/images/party.png" alt="">
-        <p>Gym</p>
-        <img class="browse-img" src="./assets/images/gym.png" alt="">
+        <div>
+          <p class="browes-desc">Party</p>
+          <img class="browse-img" src="./assets/images/party.png" alt="">
+        </div>
+        <div>
+          <p class="browes-desc">Gym</p>
+          <img class="browse-img" src="./assets/images/gym.png" alt="">
+        </div>
       </div>
     </section>
     <!-- BROWES SECTION END -->
