add link for header

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -25,10 +25,10 @@
     <nav class="nav-bar">
       <h1 class="nav-logo"><a class="link-primany" href="#">SHOP.CO</a></h1>
       <ul class="nav">
-        <li class="nav-item">Shop</li>
-        <li class="nav-item">On Sale</li>
-        <li class="nav-item">New Arrivals</li>
-        <li class="nav-item">Brand</li>
+        <li class="nav-item"><a class="link-primany" href="">Shop</a></li>
+        <li class="nav-item"><a class="link-primany" href="">On Sale</a></li>
+        <li class="nav-item"><a class="link-primany" href="">New Arrivals</a></li>
+        <li class="nav-item"><a class="link-primany" href="">Brand</a></li>
       </ul>
       <form>
         <input class="nav-search" type="text" name="search" placeholder="Search for products...">
